fixing desktop grid pull issue on mobile

--- a/assets/sass/core/_mixins.sass
+++ b/assets/sass/core/_mixins.sass
@@ -302,8 +302,8 @@
     @include alpha-omega($direction)
     @include grid-center
     
-    [class^="#{$pull-class}-"],
-    [class^="#{$push-class}-"]
+    [class*="#{$pull-class}-"],
+    [class*="#{$push-class}-"]
       #{$direction}: 0
       
     @include hide-view(mobile)
